// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render Button 1`] = `
<styled.button
  color=""
  onClick={[Function]}
/>
`;

exports[`Button should render Button with props 1`] = `
<styled.button
  color="blue"
  onClick={[Function]}
>
  Button
</styled.button>
`;
